# oil-pump

./: README.md  docker-compose.yml
data-consumer/: Dockerfile  go.mod  go.sum  main.go
data-producer/: .gitignore  Dockerfile  pyproject.toml
data-producer/src/: main.py
data-producer/src/config/: rabbit_config.py
data-producer/src/generator/: data_generator.py
data-producer/src/models/: data_equipment_model.py
data-producer/src/producer/: data_producer.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/fluids/: fluids.component.css  fluids.component.html  fluids.component.spec.ts  fluids.component.ts
frontend/src/app/header/: header.component.css  header.component.html  header.component.ts
frontend/src/app/home/: home.component.css  home.component.html  home.component.ts
frontend/src/app/machine/: machine.component.css  machine.component.html  machine.component.ts
frontend/src/app/material/: material.component.css  material.component.html  material.component.ts
frontend/src/app/service/: fluids.service.ts  material.service.ts  pressure.service.ts
initdb/: init.sql
