[tool.poetry]
name = "data-producer"
version = "0.1.0"
description = "A data producer for simulating a centrifugal oil pump signals."
authors = ["barbaracalderon <bcalderoni.ti@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
